# Expense-Tracker

./: database.py  main.py  models.py  pyproject.toml  schemas.py
auth/: config.py  dependencies.py  hash.py  jwt.py  oauth2.py
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Budget.jsx  Dashboard.jsx  Expenses.jsx  Export.jsx  Goals.jsx  Home.jsx  Intelligence.jsx
frontend/src/pages/auth/: Login.jsx  Register.jsx
routers/: auth.py  budget.py  dashboard.py  expenses.py  export.py  finance_engine.py  goals.py  insights.py  predictions.py  savings.py
